add http server

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/composer2/Challenge-2#readme",
   "dependencies": {
+    "http-server": "^0.9.0",
     "bootstrap": "^3.3.7"
   }
 }
